# black

./: .flake8  BUILD  BUILD.pants  pants.toml  pants_macros.py  pyproject.toml  requirements.txt  setup.py
docs/: BUILD
docs/contributing/: pants.md
profiling/: BUILD
scripts/: BUILD
src/: BUILD  black_version.py
src/black/: __init__.py  cache.py  files.py
src/blackd/: __init__.py
src/blib2to3/: BUILD
src/blib2to3/pgen2/: BUILD
tests/: BUILD  test_format.py
tests/data/: BUILD
