# Example configuration for Black.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
requires = [
  "setuptools>=45.0",
  "setuptools_scm[toml]>=6.3.1",
  "wheel",
  "mypy==0.920",

  # For type stubs when running with mypyc
  "mypy-extensions >= 0.4.3",
  #"ipython>=7.8.0",
  #"tokenize-rt>=3.2.0",
  "tomli >= 0.10.2; python_full_version < '3.11.0a7'",
  "types-typed-ast >= 1.4.2; python_version < '3.8' and implementation_name == 'cpython'",
  "types-dataclasses >= 0.1.3; python_version < '3.7'",
  "typing-extensions > 3.10.0.1; python_version < '3.10'",
  "click >= 8.0.0",
  "uvloop>=0.15.2",
  "pathspec>=0.9.0",
  "platformdirs >= 2.1.0",
  "types-colorama>=0.4.3",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Option below requires `tests/optional.py`
optional-tests = [
  "no_blackd: run when `d` extra NOT installed",
  "no_jupyter: run when `jupyter` extra NOT installed",
]
markers = [
  "incompatible_with_mypyc: run when testing mypyc compiled black"
]
